# Bayonetta

./: .env_expample  .gitignore  Dockerfile  README.md  manager.py  pyproject.toml  todo.md
docker/: entrypoint.sh
docker/supervisor/: supervisord.conf
docker/supervisor/conf.d/: uvicorn.ini
program/: alembic.ini  alembic_models.py  main.py
program/alembic/: env.py
program/apps/: on_event.py  router.py
program/apps/admin/: models.py  router.py
program/apps/admin/views/: auth.py  operation_record.py
program/apps/admin/views/menu_handler/: build_menu.py  menu.py  menu_type.py
program/apps/admin/views/operation_record_handler/: operation_record.py  operation_record_types.py  utils.py
program/apps/auth/: router.py
program/apps/auth/views/: auth.py  auth_types.py
program/apps/cmdb/: models.py  router.py
program/apps/index/: router.py
program/apps/index/views/: health.py  init.py  init_db_items.py
program/apps/kube_dashboard/: models.py  router.py
program/oracle/: __init__.py  crud_base.py  oracle_sqlalchemy.py  snowflake.py  sqlalchemy.py  types.py  utils.py
program/watchtower/: __init__.py  global_router.py  server.py
program/watchtower/depends/authorization/: __init__.py  authorization.py  types.py
program/watchtower/depends/cache/: __init__.py  cache.py
program/watchtower/middleware/: common.py  cors.py  middlewares.py
program/watchtower/settings/: __init__.py  logger_config.py  settings.py
program/watchtower/status/: global_status.py
program/watchtower/status/types/: exception.py  response.py
scripts/: README.md  build.sh  makemigrations.sh  migrate.sh  run_development_environment.sh
scripts/development_environment_files/: redis.conf
(+22 files in other folders)
