[tool.poetry]
name = "bayonetta"
version = "0.1.0"
description = ""
authors = ["aaron <alucard94gan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = "^4.5.5"
sqlalchemy = "^2.0.15"
aiomysql = "^0.1.1"
email-validator = "^2.0.0.post2"

[tool.poetry.group.dev.dependencies]
alembic = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.portry.source]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
